Slightly tweaked content letter spacing. Fixed banner location on mobile

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -579,6 +579,7 @@ nav {
 .post-content {
   font-size: 16px;
   line-height: 28px;
+  letter-spacing: 0.03125em;
 }
 
 .post-banner {
